--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    font-family: 'Arial', sans-serif;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #f0f0f0;
 }
 
 h3{
@@ -55,4 +55,15 @@ button {
     background-color: #d3d3d3;
     padding: 10px;
     cursor: pointer;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.wrapper > * {
+  padding: 20px;
+}
+.page-main {
+  flex-grow: 1;
 }
